--- a/gcp-pipeline.yaml
+++ b/gcp-pipeline.yaml
@@ -1,7 +1,7 @@
 steps:
 #First Clone from Google Cloud Source Repository  
 - name: 'gcr.io/cloud-builders/git'
-  args: ['clone','https://source.developers.google.com/p/${_PROJECT}/r/${_REPO_NAME}']
+  args: ['clone','https://github.com/cooldsachin/RandomQuotes-Java.git']
 
 #Build the image 
 - name: 'gcr.io/cloud-builders/docker'
@@ -24,14 +24,14 @@ steps:
   
 substitutions:
     #GCP Specific configuration. Please DON'T change anything
-    _PROJECT: learn-gcp-with-mahesh
-    _ZONE: asia-south1-a
-    _GKE_CLUSTER: learn-gcp-with-mahesh-gke-cluster
+    _PROJECT: parabolic-rope-278721
+    _ZONE: us-central1-c	
+    _GKE_CLUSTER: k8s-cluster
     
     #Repository Specific configuration. DevOps can change this settings
-    _DEPLOYMENTNAME: hello-world-service
-    _CONTAINERNAME: hello-world-service    
-    _REPO_NAME: cicd-service
+    _DEPLOYMENTNAME: random-quote-service
+    _CONTAINERNAME: random-quote-service    
+    _REPO_NAME: RandomQuotes-Java
     
     # Developers ONLY change
     _VERSION: v1.0
