--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -29,6 +29,7 @@ substitutions:
     _GKE_CLUSTER: k8s-cluster
     
     #Repository Specific configuration. DevOps can change this settings
+    _IMAGE: random-quote
     _DEPLOYMENTNAME: random-quote-service
     _CONTAINERNAME: random-quote-service    
     _REPO_NAME: RandomQuotes-Java
