--- a/random-quote-deployment.yaml
+++ b/random-quote-deployment.yaml
@@ -1,42 +1,42 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: voting-service1
+  name: random-quote-service
   labels:
-    name: voting-service1
-    app: demo-voting-app1
+    name: random-quote-service
+    app: demo-random-quote-deployment
 spec:
   ports:
   - port: 80
     targetPort: 80
   type: LoadBalancer
   selector:
-     name: voting-app-pod1
-     app: demo-voting-app1
+     name: random-quote-service
+     app: demo-random-quote-deployment
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: voting-app-deployment
+  name: random-quote-deployment
   labels:
-    app: demo-voting-app1
+    app: demo-random-quote-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: voting-app-pod1
-      app: demo-voting-app1
+      name: random-quote-deployment
+      app: demo-random-quote-deployment
   template:
     metadata:
-      name: voting-app-pod1
+      name: random-quote-deployment
       labels:
-        name: voting-app-pod1
-        app: demo-voting-app1
+        name: random-quote-deployment
+        app: demo-random-quote-deployment
 
     spec:
       containers:
-      - name: voting-app1
-        image: cooldsachin/reactjs
+      - name: random-quote-deployment
+        image: gcr.io/parabolic-rope-278721/random-quote
         imagePullPolicy: Always
         ports:
         - containerPort: 80
@@ -49,7 +49,7 @@ spec:
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: voting-app1
+  name: ramdom-quote-deployment
   namespace: default
 spec:
   maxReplicas: 5
@@ -57,6 +57,6 @@ spec:
   scaleTargetRef:
     apiVersion: extensions/v1beta1
     kind: Deployment
-    name: voting-app1
+    name: ramdom-quote-deployment
   targetCPUUtilizationPercentage: 80
 
